--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "proxy": "http://127.0.0.1:8080",
   "private": true,
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "react-select": "^5.3.2",
     "recoil": "^0.7.3-alpha.2",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
