--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "proxy": "http://127.0.0.1:8080",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
