--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-select": "^5.3.2",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.3",
     "recoil-persist": "^4.2.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
+    "swiper": "^8.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
