--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^2.1.3",
     "react-select": "^5.3.2",
     "react-slick": "^0.29.0",
+    "react-swipeable": "^7.0.0",
     "recoil": "^0.7.3",
     "recoil-persist": "^4.2.0",
     "slick-carousel": "^1.8.1",
