--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "proxy": "http://127.0.0.1:8080",
+  "proxy": "http://localhost:8080",
   "description": "",
   "main": "index.js",
   "scripts": {
